--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ember": "~2.8.0",
     "ember-cli-shims": "0.1.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "codemirror": "^5.19.0"
   }
 }
