--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
     "ember": "~2.8.0",
     "ember-cli-shims": "0.1.1",
     "mocha": "^3.1.2",
-    "codemirror": "^5.19.0"
+    "codemirror": "^5.19.0",
+    "hammer.js": "^2.0.8",
+    "matchMedia": "0.2.0"
   }
 }
