--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "mocha": "^3.1.2",
     "codemirror": "^5.19.0",
     "hammer.js": "^2.0.8",
-    "matchMedia": "0.2.0"
+    "matchMedia": "0.2.0",
+    "bootstrap": "^3.3.7"
   }
 }
