--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-paper": "1.0.0-alpha.7",
     "ember-resolver": "^2.0.3",
+    "eslint-config-bbva": "^1.0.4",
     "loader.js": "^4.0.1"
   }
 }
