--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "codemirror": "^5.19.0",
     "hammer.js": "^2.0.8",
     "matchMedia": "0.2.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "showdown": "^1.4.4"
   }
 }
