--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
+    "broccoli-funnel": "^1.0.9",
     "broccoli-merge-trees": "^1.1.4",
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.8.0",
