--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "^3.3.7",
     "showdown": "^1.4.4",
     "bootstrap-solarized-theme": "^1.0.3",
-    "expect.js": "^0.3.1"
+    "expect.js": "^0.3.1",
+    "blob-polyfill": "^1.0.20150320"
   }
 }
