--- a/lib/katas-description/package.json
+++ b/lib/katas-description/package.json
@@ -2,5 +2,9 @@
   "name": "katas-description",
   "keywords": [
     "ember-addon"
-  ]
+  ],
+  "devDependencies": {
+    "lodash.values": "^4.3.0",
+    "walk-sync": "^0.3.1"
+  }
 }
