--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "eslint-config-bbva"
+  "parser": "babel-eslint",
+  "ecmaVersion": 7,
+  "extends": "eslint-config-bbva",
+  "env": {
+    "mocha": true
+  },
+  "plugins": [
+    "mocha"
+  ]
 }
