--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-standalone": "^6.19.0",
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-funnel": "^1.0.9",
     "broccoli-merge-trees": "^1.1.4",
@@ -47,6 +48,7 @@
     "ember-resolver": "^2.0.3",
     "eslint": "2.8.0",
     "eslint-config-bbva": "^1.0.4",
+    "eslint-plugin-mocha": "^4.7.0",
     "loader.js": "^4.0.1",
     "markdown-code-highlighting": "0.1.0",
     "walk-sync": "^0.3.1"
@@ -55,5 +57,8 @@
     "paths": [
       "lib/katas-description"
     ]
+  },
+  "dependencies": {
+    "babel-eslint": "^7.1.1"
   }
 }
