--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,14 @@
     "codemirror": "^5.19.0",
     "ember": "~2.8.0",
     "ember-cli-shims": "0.1.1",
-    "expect.js": "^0.3.1",
     "hammer.js": "^2.0.8",
     "highlightjs": "^9.8.0",
     "marked": "^0.3.6",
     "matchMedia": "0.2.0",
     "mocha": "^3.1.2",
-    "showdown": "^1.4.4"
+    "showdown": "^1.4.4",
+    "sinon": "^1.17.6",
+    "chai": "^3.5.0",
+    "sinon-chai": "^2.8.0"
   }
 }
