--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-standalone": "^6.19.0",
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-funnel": "^1.0.9",
@@ -51,8 +53,7 @@
     "eslint-plugin-mocha": "^4.7.0",
     "loader.js": "^4.0.1",
     "markdown-code-highlighting": "0.1.0",
-    "walk-sync": "^0.3.1",
-    "babel-eslint": "^7.1.1"
+    "walk-sync": "^0.3.1"
   },
   "ember-addon": {
     "paths": [
